# galactic_outflows_data_generator

./: .gitignore  README.MD  README.md  pyproject.toml
.github/workflows/: run-tests.yml
data_generator/: main.py  run.py  simulation.py
data_generator/configurations/: constants.py  initial_galaxy_params.py  path_version_settings.py  physical_values.py  physics_constants.py  switches.py  units.py
data_generator/data_models/: arrays_modifier.py  initial_masses_calculations.py
data_generator/mathematical_calculations/: DrivingForceIntegrator.py  FadeTypeSwitcher.py  IsothermalProfile.py  NFWProfile.py  mass_calculation.py
data_generator/results/v1.0/: _0_0_0.csv  _0_1_0.csv  _0_2_0.csv  _0_3_0.csv  _0_4_0.csv  _10_0_0.csv  _10_1_0.csv  _10_2_0.csv  _10_3_0.csv  _10_4_0.csv  _1_0_0.csv  _1_1_0.csv  _1_2_0.csv  _1_3_0.csv  _1_4_0.csv  _2_0_0.csv  _2_1_0.csv  _2_2_0.csv  _2_3_0.csv  _2_4_0.csv  _3_0_0.csv  _3_1_0.csv  _3_2_0.csv  _3_3_0.csv  _3_4_0.csv  _4_0_0.csv  (+29 more)
plotting_program/: filtering_functions.py  initial_arrays.py  plots_main.py  plots_main2.py  turning_plots_on_off.py
plotting_program/plots/: PlotSetup.py  chi_squared_relation.py  generic_lum_relation.py  generic_radius_relation.py  generic_time_relation_plot.py  plots_settings.py  plotting_LumAGN_relation.py  plotting_fg_relation.py  plotting_histogram.py  plotting_mbulge_relation.py  plotting_r_relation.py  plotting_time_relation.py  smbh_relations.py  subfigure_plt.py  time.csv
tests/: test_initial_galaxy_params.py  test_outflow_simulation.py
tests/data/: outflow_properties_default_params.csv
(+624 files in other folders)
