[tool.poetry]
name = "galactic_outflows_data_generator"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
prospector = "^1.3.1"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
